// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Defensive 1`] = `
[
  "1a4022d88c4664",
  "0042864d705045",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "0470c6d84e3c67",
  "07ec87883d8303",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1152ee5e00a9c5",
  "0fcd003aa134fd",
  "0a7bc7a19c196d",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "177af8ff308856",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "1297ba12699dd7",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "090002547a9be0",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "03e1fd9833de0b",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "0270a2bfaf05bf",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "173fd30a5534b1",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "1e0c9dae21c114",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "0747a646561ee9",
  "0e4db3569f7cc6",
  "0033c969cdb65f",
  "1e2c800c7488d4",
  "151a4865e792cc",
  "0e6b7596b44e8f",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "04cd3cdbc9ff33",
  "033ca8dc6b9aef",
  "1a4f8db291bb10",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "00fd4a639091ab",
  "1e177cfec9272e",
  "0c899f8d401940",
  "072006f3087ef9",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "0468c69bc0a9ad",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "05c2f4bf09ac38",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "1bc92e2652560a",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "10761e7f06747a",
  "12c61b266472ac",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "0004c8f44c8226",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "09d5afcf41f056",
  "09476badc63922",
  "0c9a478b190f14",
  "173ceaf89bc57c",
  "183e6fa57f13e3",
  "0c2b86db737d53",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "081b9986e438a0",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "1db89cfed42bed",
  "13a023cb7733af",
  "0191962f157852",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "0e60bf400f1771",
  "1c862913173a2f",
  "1fbef160ba5563",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: Max TPS 1`] = `
[
  "14b265b13b0a70",
  "123ae2de91cb0f",
  "1e58d3b5e46062",
  "0c280608473dc1",
  "131db521b32dd4",
  "0f108d6b7b6fd0",
  "14b7af2ac46b47",
  "18ab0fcaec7f21",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1308626d4251de",
  "07a1db3c4483e2",
  "146fcb9d61e9eb",
  "1eabfe9a425031",
  "0c283441650d8b",
  "16e29531272f46",
  "005cae0faba801",
  "0c8ae9c781bddf",
  "16b9becbe1ea5c",
  "0d76a9dce25b89",
  "1fd1cb52908921",
  "1dd996b5b3efbc",
  "0cb2c1a6a3dbcd",
  "1aa2389f602570",
  "16049bfcbb4eec",
  "085f4be779a84e",
  "05f389c2ee6043",
  "1e1417fd446fc8",
  "0027008fe2faf9",
  "0a4089c1d1ba93",
  "179c5355e4c03d",
  "0e27afeb62b671",
  "0ce119b6d57e26",
  "03ac9e8edeae20",
  "099a09697da63b",
  "0523478561b1df",
  "133da274a7621e",
  "00162d4483f1dc",
  "1f4030d67d1788",
  "022fb5d34a0fb8",
  "0f1f40c76a4fab",
  "069fc7f4dedca9",
  "096e6982b8f7d3",
  "07be242ed4cb4d",
  "1ae5930d30459b",
  "10f628064424da",
  "126afb0c3d108d",
  "070e532f4398be",
  "1e7cb2ea1d7aea",
  "1c92786d67a90b",
  "0042c8b0dbc7cc",
  "1c72c39f710bbb",
  "03c40c6671517a",
  "0ddc2239f8fed6",
  "18bef1a34fb32a",
  "199cad4b2fa210",
  "0c6f4618157976",
  "12cf42450d553b",
  "1b76eda138d077",
  "0dc691b5884bcd",
  "00dd768f806c1d",
  "08901db71f5cfc",
  "1313eec92d401f",
  "00aadee3d78d2e",
  "1da704f12ce7c1",
  "0e952a08a2c1bd",
  "154ec6e158f8ba",
  "0321dc4a266040",
  "123c934e613fdc",
  "1fd36a7cc18f69",
  "0b79d7bf7358c6",
  "1023b3b09d5e11",
  "1994f81e8636f1",
  "0daf49ecf7d2df",
  "1e9587cdd6bdd7",
  "1e284ca4a3423d",
  "0405f5b9a5e251",
  "00b44075614ccd",
  "169837d4e18ac5",
  "1952691be0cc07",
  "1fc5e3fcf790be",
  "0ff7536f9e8b37",
  "1c08b7e7ed8498",
  "08ea8752ade1ef",
  "03795e6ced827d",
  "10f69552f3d803",
  "19da0472814bae",
  "151d0d2f1d059c",
  "1b19c8171569ca",
  "0aa72f6a26db7e",
  "1a3f85850ae4a4",
  "1f40e98c36c377",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "0f2f1fdf3dcc9e",
  "1c574559d2cf70",
  "031a3cfe22700c",
  "14ee78f7b90108",
  "1dcb3d1fbfb74e",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "1417d1979976a8",
  "155fcaeed56be6",
  "06be3a6c6469b0",
  "0636c5e8f576a7",
  "101139cfc40652",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12e936fb87b7f6",
  "01ec0a1495fc3c",
  "0a3746b37d315c",
  "1b8f42fb0713fa",
  "14972aa3f06acf",
  "08050f7f6495ec",
  "181881f41a999c",
  "0883dac6baf369",
  "1b956175dadb93",
  "0791ce03e105c0",
  "0a67661fb354ec",
  "0c7c7891d675ab",
  "1742bda58ecf6e",
  "1f56b7ee8add7f",
  "07a38e203a54cd",
  "0707016f48df58",
  "19e6811a37b2d9",
  "0cb3b7860b1412",
  "0029a30b8c20de",
  "0ee17919795053",
  "0ea1865633d000",
  "16f9c0480b903d",
  "0cf1974c943a26",
  "1202dab3f24394",
  "04d04a27b070ef",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "149480a4a0ccef",
  "18c189019061ed",
  "082ebf4885d6c2",
  "15ee51a0703be5",
  "0e70319671fa71",
  "0e66012806bf98",
  "18c5f156a6c9df",
  "0ac8c1376d43c2",
  "04845edec85c5a",
  "1b96809b9c33df",
  "1eb63c3794de81",
  "10746fe417edad",
  "06e511b5f90142",
  "145b5951ae2735",
  "17f8e68d7e782c",
  "1b2fdec999b972",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "11fa9a34cc2b48",
  "1fd4756d3ce9bb",
  "18b32b3bcc255a",
  "04a0c9d9b114d7",
  "1c3a064089f63e",
  "0c225c0a6d0413",
  "133ead5c70bdee",
  "0e3a8338836748",
  "1a870e0e2168f0",
  "0f759e38ed072c",
  "1c1d4048ddd442",
  "088c164e3875f4",
  "19008235c949ab",
  "19dd2a8a0f06d3",
  "00247d6b2f38b1",
  "18615081f8d847",
  "06e422c9bef7c8",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "11146165f156ec",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "12b4b6a360d105",
  "108e9094e71276",
  "01b2af492c9815",
  "164acfadc229d3",
  "11145337e30c4a",
  "15db8bbe7c3eee",
  "084370b86a6756",
  "19c94adc45f7b1",
  "1ba552dc52f04e",
  "1007030e00fdc4",
  "13a7b1a81f49c6",
  "1346e45d92f87e",
  "0a9b5966fde713",
  "07f67bff9f3218",
  "060ad6cb28112f",
  "1bf637b4f53baf",
  "11b2c25f5b857c",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random setups the rotation they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "1a4022d88c4664",
  "123ae2de91cb0f",
  "1389d8fbe3d1d7",
  "1896131012a071",
  "14bdb5ed135628",
  "1b8b88e2b59161",
  "14b7af2ac46b47",
  "19fe81306d9c47",
  "15d63cb1d5e66e",
  "022e59dc205d61",
  "0a2af90a72269f",
  "1d3a0099489da5",
  "08d45183dcd398",
  "1f29aac941495d",
  "06e650fcbd4258",
  "19665ba9607ccc",
  "16e29531272f46",
  "14be276eb26cdb",
  "042502798363a0",
  "04ce84f4edc46d",
  "008586f6e5016f",
  "1fd1cb52908921",
  "0fcd003aa134fd",
  "0cb2c1a6a3dbcd",
  "125dbaaacc6ada",
  "062a3b221afa5e",
  "0461bf4f76e5ce",
  "0a11b20f6f8421",
  "02fe5a1328f840",
  "0027008fe2faf9",
  "16b00af750951d",
  "065e70dc61cd8b",
  "09b9f6957e0275",
  "115289b128a9eb",
  "145375b3131731",
  "099a09697da63b",
  "1bad7695eb727d",
  "133da274a7621e",
  "1027d175414fd4",
  "18bfda5db6b7c0",
  "0f6a96864a7d1c",
  "11ee5b2ef8a84a",
  "1df30512265ee3",
  "16c1f7ed724256",
  "07be242ed4cb4d",
  "0e6180a4d204bd",
  "1fc8235f4e6e12",
  "126afb0c3d108d",
  "111b121baf1d29",
  "1e7cb2ea1d7aea",
  "0896eba65043ec",
  "0042c8b0dbc7cc",
  "0a1fd1a7f95e9f",
  "03c40c6671517a",
  "175c79f1c50360",
  "028eccb4d478f1",
  "0739140e48ed10",
  "0c6f4618157976",
  "0ffc50484d6866",
  "1b76eda138d077",
  "12c1fc9f7fc0d9",
  "004e300a6f7d87",
  "02ce6e7044cbb9",
  "1313eec92d401f",
  "1fcc44676f07a6",
  "1da704f12ce7c1",
  "1e1e93ff1af5b6",
  "1fe2840f959062",
  "0321dc4a266040",
  "1bb4d8b21fa683",
  "1954e0a9850b09",
  "047a62b9b02c4e",
  "1a6bbb5d9d94ea",
  "15830f3419d348",
  "1ba5e722b2e619",
  "065241a9c959ad",
  "0291eedc019155",
  "01e3368ba0baed",
  "00b44075614ccd",
  "04863f750ab0cc",
  "02edbbe9941b08",
  "1fc5e3fcf790be",
  "19127d4f8dda46",
  "111ef3f302ae86",
  "0ff89629c81485",
  "097a994b908d60",
  "03d468c993bd1c",
  "09a6812b9e250c",
  "16d3b2309aeac0",
  "0ff6fabc66b7ba",
  "0ee54fb969c364",
  "1a3f85850ae4a4",
  "0e4db3569f7cc6",
  "1613b9bd204e27",
  "0a3bd9a95a6f90",
  "0efcc5a1d40808",
  "1e1738df0b45da",
  "1947165702ac97",
  "1c574559d2cf70",
  "0b3ec2e0ea6e2f",
  "154a636b1a1f3d",
  "10ba1c2802515d",
  "1bc4cd3d45ead7",
  "1667470f6055cb",
  "033ca8dc6b9aef",
  "155fcaeed56be6",
  "0c44376eada360",
  "0783c69b15c18d",
  "0e197672f7af36",
  "1dd6d2277a1dc8",
  "107b8d1b9beaae",
  "0c899f8d401940",
  "1fb27b55884625",
  "12d71a8ace6731",
  "082e43ace66a07",
  "1d26559e1226c9",
  "10cce259f4d096",
  "14972aa3f06acf",
  "008d74ba2091b2",
  "1ac1c5677e4819",
  "0883dac6baf369",
  "001a9dad65f23d",
  "0791ce03e105c0",
  "1d986c7c1ea54b",
  "0fb51aa3efc7ba",
  "07be4ef8728833",
  "0ab2fc2fa7167b",
  "04eba5af6cbae0",
  "0707016f48df58",
  "19e6811a37b2d9",
  "19f8acc4450ec3",
  "0e85c71d729c78",
  "0b37efc186d79e",
  "0ea1865633d000",
  "064e9e20a2cb3e",
  "0cf1974c943a26",
  "1b7bbbae04faf2",
  "19bdf738ac2d5d",
  "0f58c5d08ac9e0",
  "1223f57b94812e",
  "1d0cab7b9d421c",
  "168027fa6cdd66",
  "18c189019061ed",
  "082ebf4885d6c2",
  "19884ca4bbf558",
  "070c1cf4f44b00",
  "0e66012806bf98",
  "02be43e84e6980",
  "041b18bac0fc6a",
  "189ac7d14cd787",
  "172d3cde768b9f",
  "0eb3ed56fcd01c",
  "17dedaf9e4f5cb",
  "089e333abbf3d6",
  "145b5951ae2735",
  "09476badc63922",
  "0c9a478b190f14",
  "0bb995639dfe8d",
  "0c8efbb146032b",
  "0781e8f4bf1573",
  "0be15362d6a5d7",
  "08d10a38c2c38b",
  "18b32b3bcc255a",
  "14435ab1785d15",
  "1c3a064089f63e",
  "1a81119a81e974",
  "133ead5c70bdee",
  "05e01678a68006",
  "1df3d4cc790ab6",
  "0389828a6c9919",
  "1c1d4048ddd442",
  "1cdd2b47efc949",
  "1f3d23736923b8",
  "192a31d6071c12",
  "0fad1ff3e96c11",
  "0c1e5dcea3bc4e",
  "06df1547ce295e",
  "13edae53052307",
  "13a023cb7733af",
  "1c76c584d5a6a9",
  "1e9d8faaad194a",
  "19b6f660a82b5a",
  "09f4ae820f9285",
  "04548bb22a644c",
  "09c06eafe64ddd",
  "01b2af492c9815",
  "1c862913173a2f",
  "11145337e30c4a",
  "1e8799430be7db",
  "1a2cf1329544d4",
  "0120b2dd32442a",
  "0fb908cd5a39b9",
  "11ec605b320f65",
  "1ab472389f2bc6",
  "0c65032775dffc",
  "0a9b5966fde713",
  "02caefbfe89a09",
  "150369c7fccae5",
  "1be9eb5d6b1dbc",
  "0cbee0eec7335a",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Defensive 1`] = `
[
  "0d4f5401e4c5ff",
  "13d31956cd9ac1",
  "0dbb2e2ce5e835",
  "0c9c1c3c74ff89",
  "087a7d0833ed66",
  "0c409ec8e2a678",
  "036cca74f33660",
  "0ccbaf3b721a81",
  "196f4a40f73e37",
  "1d8f7b643321ef",
  "1b2b96f150a818",
  "1997a940db3f61",
  "06e040107c7da6",
  "1f937cbcf732c9",
  "1d4c2a52d9c65c",
  "14d4ed1f37dad3",
  "1b8225412fac7b",
  "0555868fbed400",
  "1359487fc2a5e8",
  "06fef34304c7ad",
  "076d2fbcac7a4c",
  "0ad0a7aa4484dc",
  "0a66543be88679",
  "040e799c17259c",
  "0fcb753233a18e",
  "1b7bfcb6890737",
  "116ede059510ff",
  "17354cf754f995",
  "0fe39ad7708320",
  "15e7f8aa9f0900",
  "1661f1c50148ca",
  "0203fe70a0afdd",
  "034e1bb5c38f27",
  "1e7b3ea007cb52",
  "0f238287a0726e",
  "14fe9365c4c635",
  "06a0a54746fd81",
  "121b1f988e3a96",
  "1476ae7a52228b",
  "1f25428481ccd1",
  "12868bba63b5e7",
  "1a1c604801472a",
  "145c95ffec9389",
  "1d5e300d2e6ad0",
  "1335bab0747fc9",
  "01322b19d668ca",
  "167fb3526df68f",
  "1085d15c942c3a",
  "19997533a9db00",
  "0c7a5ca8673224",
  "106b21544b9dfd",
  "0e31f5dcd2f439",
  "11f26f2d3c8448",
  "1d1b5a99506bc5",
  "10fedd33332cbf",
  "16f70dcab9f9ec",
  "1948ecb97db5ca",
  "11670fe257746b",
  "05e325ef7e54b6",
  "1e25d579888e1c",
  "03a115bd8c81ea",
  "18ef053a9c7006",
  "1808a268f24087",
  "0ffb379a524d19",
  "08d0cf24d93fed",
  "179b39447b7aeb",
  "16ad109d7c9777",
  "014900fe1394a6",
  "06b1eac3ea0765",
  "1b9a9aa6b316fb",
  "0e9a8c1268eb9e",
  "062dc21b132059",
  "1c00f93ae80d19",
  "1a242d6064e706",
  "0d064907b7461f",
  "010ee7aeccd91c",
  "0870a79b57f2f3",
  "14db94d2fa227b",
  "07fe08267f74ab",
  "0b8860787e3bb9",
  "1c61f7f0c3d5e4",
  "1f8424ae09a2f1",
  "07275e375a7540",
  "09fae6b7f72835",
  "12c3c591ac433b",
  "12f3171ed86624",
  "1202e54fd8827d",
  "15b62e7ecb95f8",
  "07c04f306c8fda",
  "037251a3f13862",
  "102fff1cd6ed85",
  "02a5186450994e",
  "052142708947cc",
  "063f36ef2103bf",
  "0ff94565d29b92",
  "16b908fc9aa60f",
  "0603a62d2553b1",
  "1cdd6f9dfbdcdb",
  "07497f4083e2bd",
  "0836f8de4ae29b",
  "181df346b80496",
  "06629ce4ae5980",
  "13e6cc5b1e2a55",
  "176d9b1426b56a",
  "1aaa37ce1b3766",
  "009c592509e57e",
  "17f404d71441d3",
  "1f87213420a99d",
  "0808840fb0da82",
  "1958c37ee5008f",
  "1725b95db64ec2",
  "0daf2565be3021",
  "013db9a4c3b9c5",
  "0db662b8150bdc",
  "02c1eef1b13574",
  "0fa4c326a1a17f",
  "1457781ef738fe",
  "122c372ae62ce0",
  "01a69a2b563fda",
  "06d63c938a7beb",
  "1a698df4b48fed",
  "0216ba3e032af5",
  "081a342971ae89",
  "1a21f981cc9508",
  "02dbe7fd289270",
  "1c0ae81f11182a",
  "1b01c45bb0bd9e",
  "1c3f5d41e7fddf",
  "1ec388fb7255d4",
  "04b603c8c1da6e",
  "010be5df055e82",
  "091c4e575c973e",
  "076ccc106e528b",
  "0ad7586e5f81d9",
  "19f88222202733",
  "02fe2cf48b4d8d",
  "10df391876bfc4",
  "1a9beb37d6cd21",
  "11a9ff7e65129e",
  "1ac8961d354ec2",
  "1aa0dc8dd164d7",
  "02b2aefa3a400d",
  "163146c7fae765",
  "0dd37f08b97b9a",
  "12e89417e894de",
  "061c6d5a61f929",
  "167da21e23b52e",
  "13a4e7a993aff5",
  "036b158e72dfe5",
  "0b8c94d3bd53bd",
  "0d5c16a9ddb6bc",
  "06c74c06e0dda1",
  "07de6a5fb2a4a3",
  "08ceee1c3c6cef",
  "09aa1b5b42981b",
  "1f2d8753e49fe7",
  "15a5b97823ad2b",
  "173c870b133884",
  "1e3dd11ce37a99",
  "03b11644c6a44e",
  "11895907c21fc0",
  "1c98c1782b0b9d",
  "1c5a613fe1856b",
  "1a8d27631e4c87",
  "059fc328473104",
  "152cdf13747527",
  "0b76ff32286779",
  "078859471fb078",
  "0d680740a9e7a3",
  "0a0a27fe861d8d",
  "00f676383106d8",
  "0d32851c44bde4",
  "1765d55b71cd45",
  "07d4f039e620b5",
  "1be1360dcecfb3",
  "1f24ba8adfd794",
  "1d2e5087d817e2",
  "032122ecebb937",
  "1d74258bf7d51a",
  "041d503198784b",
  "0db974552ae65a",
  "17de0c359c5fbd",
  "1511ddccb6c061",
  "0dcf44394c98cf",
  "03d58e819a243b",
  "0517db7b4aaaac",
  "10446ed47abc84",
  "0193c188cb439a",
  "16f0674b23c140",
  "0a27f7b4043e51",
  "008e568c0cf212",
  "105aac161b8fc5",
  "166c92453f25d6",
  "1177d2d385e100",
  "03e7c14825d42d",
  "1c20ab1ab65e41",
  "111e7b6867120e",
  "0b593cc7741131",
  "09a8dc222a9b8a",
  "04a4bd126f7bad",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: Max TPS 1`] = `
[
  "19ed12d7db1257",
  "196f07d23c9020",
  "17987253013448",
  "1473d9b26836b6",
  "092fad416ef223",
  "01ec6835833832",
  "036cca74f33660",
  "008a50df53c024",
  "196f4a40f73e37",
  "0ac1939c317392",
  "0d6cfce984e649",
  "1917521edfe604",
  "0aeb8cdfd88b08",
  "133ab76124e85e",
  "1c8d5cb53232c8",
  "147786d0eea23b",
  "1b8225412fac7b",
  "0d5266dc11b3aa",
  "1e75ff8bc1ffdf",
  "02a901a8eca857",
  "001e23856ed733",
  "0587b2436d050d",
  "05f7e4cf64d09a",
  "027fd31a3f84a3",
  "0dbda90ec6fe4f",
  "00a1df1db90029",
  "0e2b41a67b87bf",
  "15c79bdb9e4b4c",
  "0d772fd9b30528",
  "16bc741335dcf9",
  "0a38c690b9643a",
  "05f35d0782c71d",
  "0f85fa53e0c4a3",
  "1455371cb37299",
  "07174dc9fd93cb",
  "14fe9365c4c635",
  "139b9f691a05d5",
  "156e76f8984e40",
  "0de0e274d26b76",
  "172b3f857e3e54",
  "17c6f30fcbea1b",
  "0011854876f626",
  "1bde405fbd9ab0",
  "07b1b41ed2e4fb",
  "19794c5e753987",
  "0a2128c15c101c",
  "00c9214980e201",
  "1085d15c942c3a",
  "0b22d0036d8f9e",
  "09bec5eb243284",
  "0c87bdc18f1dd4",
  "0e31f5dcd2f439",
  "118dbc1c18e2b3",
  "1d1b5a99506bc5",
  "19394a4234bd9c",
  "10bde6d070670e",
  "0636c867959f3f",
  "11670fe257746b",
  "04f053422fa52b",
  "1b30a88ac77413",
  "1a0d38a083dbcc",
  "121069c24bb2e1",
  "1228ec04fc86ec",
  "0ffb379a524d19",
  "02620595b471e9",
  "179b39447b7aeb",
  "04ca672c873be9",
  "1a2a9779fcce6c",
  "018cb50dfecc13",
  "163aa56d86e03d",
  "00672c18394115",
  "0516911bf120dd",
  "072a0cc9d678a7",
  "08d305533aa0ee",
  "0c3b52e8f73819",
  "13b65a1c357d82",
  "1f2f1c961aeeb1",
  "090b6dce305180",
  "1b52fe6945585a",
  "0d36b96041d21f",
  "01a3201fdca426",
  "1f8424ae09a2f1",
  "1f637b78bde871",
  "176e896193f27c",
  "1a390b5fc34c25",
  "18c23f6c7919f1",
  "121f758e155b59",
  "10cd19b6ddfbd0",
  "0d66193d0ff03e",
  "1aa73723075624",
  "1dc67f3c53fb45",
  "1739bbb1dc48a4",
  "0525530568582a",
  "13e8640e674e56",
  "10737c0aa05c77",
  "1390c0d46f231b",
  "16967b7a2197a6",
  "0643e3cea23244",
  "07497f4083e2bd",
  "133c683451e5f3",
  "0ffa0a2c49f150",
  "11f587cf7be931",
  "13e6cc5b1e2a55",
  "11bd0b07c001ff",
  "16cca9f51303af",
  "0e528964b2818b",
  "1d7cbe8803b959",
  "1d5663b3020565",
  "17da794d8233a1",
  "1e0910ab1b2c0d",
  "04839eefc141b5",
  "0daf2565be3021",
  "119116235c1a26",
  "19fe2df9b4da39",
  "034512616c0d01",
  "10715bafdfdcd0",
  "1042fbaddf823f",
  "0c4ca4be549fbb",
  "1088d1818a8e14",
  "1d4711cc026cb9",
  "1a698df4b48fed",
  "12f58e7c88fce6",
  "081a342971ae89",
  "15dc23b4557026",
  "14c7a2e7fd04b9",
  "0dd16ca1c4fa0d",
  "187f6bc88ad968",
  "19235b3ad51c74",
  "0381903fb1bdc7",
  "04b603c8c1da6e",
  "121e50a28af8a8",
  "1c604ef34bc303",
  "1a55446e96015a",
  "157c03529412b7",
  "05684777a083c6",
  "02fe2cf48b4d8d",
  "06cbe53c66f5fe",
  "04b92bfe25bac0",
  "078913db8647e8",
  "11095c5181d009",
  "1aa0dc8dd164d7",
  "04281717e5bac0",
  "163146c7fae765",
  "046974c7ed9e29",
  "1d86312c311c0c",
  "1ceac82f7e0a12",
  "167da21e23b52e",
  "135a9908d65a10",
  "09903d1e9b3a56",
  "15be7280b4c03a",
  "186ebc96703b47",
  "1d2b56b1eb6aed",
  "17faba56cc9c88",
  "07a46f7b32be3b",
  "054fe5a64dcfb2",
  "03c378d05cbb36",
  "14837cecf51e5f",
  "12c2feed5e4ccc",
  "0c2fb3b5815ef5",
  "0500e57b5c9c6d",
  "1124469609e44b",
  "08e71a0c5ca6ad",
  "0dfb3bf34da588",
  "13b458aa0f637b",
  "059fc328473104",
  "11dfe4376ec993",
  "0b76ff32286779",
  "1779d0344d824e",
  "1fbf9c2aea9551",
  "035f1e00648b85",
  "00f676383106d8",
  "05bf232b4e9df6",
  "10ec9f8e5a1c74",
  "15501f072ccff9",
  "087ca27cb0a818",
  "106a9ac1321734",
  "058b2be4911e95",
  "0751edb68c2672",
  "1d74258bf7d51a",
  "0a331a3ab251a2",
  "17af27c7be4d00",
  "17de0c359c5fbd",
  "1511ddccb6c061",
  "136d63633e3fa5",
  "0ea06e78626d91",
  "17eb4a86fae3c5",
  "045ea1657b5d26",
  "19527f38d44a2c",
  "0d82cf0d8d9632",
  "1a13f3d4cb3f20",
  "046467f8ebc195",
  "0c3f2ac73febcf",
  "01ec925883dc45",
  "0189f10cdb3806",
  "183aee99fa321c",
  "1c20ab1ab65e41",
  "1b32320eacb6fd",
  "17013a332a170b",
  "1fb5bf6992f7c2",
  "0b5dd63c612470",
]
`;

exports[`Protection’s priority list: Defensive and Max TPS as before the list (D28, D31) > gives 200 random whole setups the plan they had before the list: as drawn, a missing Priority as Defensive 1`] = `
[
  "0d4f5401e4c5ff",
  "196f07d23c9020",
  "0dbb2e2ce5e835",
  "0c9c1c3c74ff89",
  "087a7d0833ed66",
  "0c409ec8e2a678",
  "036cca74f33660",
  "0ccbaf3b721a81",
  "196f4a40f73e37",
  "0ac1939c317392",
  "0d6cfce984e649",
  "1997a940db3f61",
  "06e040107c7da6",
  "1f937cbcf732c9",
  "1d4c2a52d9c65c",
  "14d4ed1f37dad3",
  "1b8225412fac7b",
  "0555868fbed400",
  "1359487fc2a5e8",
  "06fef34304c7ad",
  "076d2fbcac7a4c",
  "0587b2436d050d",
  "0a66543be88679",
  "027fd31a3f84a3",
  "0fcb753233a18e",
  "1b7bfcb6890737",
  "116ede059510ff",
  "17354cf754f995",
  "0fe39ad7708320",
  "16bc741335dcf9",
  "1661f1c50148ca",
  "0203fe70a0afdd",
  "034e1bb5c38f27",
  "1e7b3ea007cb52",
  "0f238287a0726e",
  "14fe9365c4c635",
  "06a0a54746fd81",
  "156e76f8984e40",
  "1476ae7a52228b",
  "1f25428481ccd1",
  "12868bba63b5e7",
  "1a1c604801472a",
  "145c95ffec9389",
  "1d5e300d2e6ad0",
  "19794c5e753987",
  "01322b19d668ca",
  "167fb3526df68f",
  "1085d15c942c3a",
  "19997533a9db00",
  "09bec5eb243284",
  "106b21544b9dfd",
  "0e31f5dcd2f439",
  "11f26f2d3c8448",
  "1d1b5a99506bc5",
  "10fedd33332cbf",
  "16f70dcab9f9ec",
  "1948ecb97db5ca",
  "11670fe257746b",
  "05e325ef7e54b6",
  "1b30a88ac77413",
  "03a115bd8c81ea",
  "18ef053a9c7006",
  "1808a268f24087",
  "0ffb379a524d19",
  "08d0cf24d93fed",
  "179b39447b7aeb",
  "16ad109d7c9777",
  "014900fe1394a6",
  "018cb50dfecc13",
  "1b9a9aa6b316fb",
  "0e9a8c1268eb9e",
  "062dc21b132059",
  "1c00f93ae80d19",
  "1a242d6064e706",
  "0d064907b7461f",
  "010ee7aeccd91c",
  "0870a79b57f2f3",
  "14db94d2fa227b",
  "1b52fe6945585a",
  "0b8860787e3bb9",
  "1c61f7f0c3d5e4",
  "1f8424ae09a2f1",
  "07275e375a7540",
  "09fae6b7f72835",
  "12c3c591ac433b",
  "12f3171ed86624",
  "1202e54fd8827d",
  "15b62e7ecb95f8",
  "07c04f306c8fda",
  "037251a3f13862",
  "102fff1cd6ed85",
  "1739bbb1dc48a4",
  "052142708947cc",
  "13e8640e674e56",
  "10737c0aa05c77",
  "1390c0d46f231b",
  "16967b7a2197a6",
  "1cdd6f9dfbdcdb",
  "07497f4083e2bd",
  "0836f8de4ae29b",
  "181df346b80496",
  "06629ce4ae5980",
  "13e6cc5b1e2a55",
  "11bd0b07c001ff",
  "1aaa37ce1b3766",
  "0e528964b2818b",
  "17f404d71441d3",
  "1f87213420a99d",
  "0808840fb0da82",
  "1e0910ab1b2c0d",
  "04839eefc141b5",
  "0daf2565be3021",
  "119116235c1a26",
  "0db662b8150bdc",
  "02c1eef1b13574",
  "0fa4c326a1a17f",
  "1457781ef738fe",
  "0c4ca4be549fbb",
  "01a69a2b563fda",
  "06d63c938a7beb",
  "1a698df4b48fed",
  "0216ba3e032af5",
  "081a342971ae89",
  "1a21f981cc9508",
  "02dbe7fd289270",
  "1c0ae81f11182a",
  "1b01c45bb0bd9e",
  "1c3f5d41e7fddf",
  "0381903fb1bdc7",
  "04b603c8c1da6e",
  "010be5df055e82",
  "091c4e575c973e",
  "076ccc106e528b",
  "157c03529412b7",
  "19f88222202733",
  "02fe2cf48b4d8d",
  "10df391876bfc4",
  "1a9beb37d6cd21",
  "078913db8647e8",
  "11095c5181d009",
  "1aa0dc8dd164d7",
  "02b2aefa3a400d",
  "163146c7fae765",
  "046974c7ed9e29",
  "12e89417e894de",
  "061c6d5a61f929",
  "167da21e23b52e",
  "13a4e7a993aff5",
  "036b158e72dfe5",
  "0b8c94d3bd53bd",
  "0d5c16a9ddb6bc",
  "06c74c06e0dda1",
  "07de6a5fb2a4a3",
  "08ceee1c3c6cef",
  "054fe5a64dcfb2",
  "1f2d8753e49fe7",
  "15a5b97823ad2b",
  "12c2feed5e4ccc",
  "0c2fb3b5815ef5",
  "0500e57b5c9c6d",
  "11895907c21fc0",
  "1c98c1782b0b9d",
  "0dfb3bf34da588",
  "1a8d27631e4c87",
  "059fc328473104",
  "152cdf13747527",
  "0b76ff32286779",
  "078859471fb078",
  "0d680740a9e7a3",
  "0a0a27fe861d8d",
  "00f676383106d8",
  "0d32851c44bde4",
  "1765d55b71cd45",
  "07d4f039e620b5",
  "1be1360dcecfb3",
  "1f24ba8adfd794",
  "1d2e5087d817e2",
  "0751edb68c2672",
  "1d74258bf7d51a",
  "0a331a3ab251a2",
  "0db974552ae65a",
  "17de0c359c5fbd",
  "1511ddccb6c061",
  "0dcf44394c98cf",
  "03d58e819a243b",
  "17eb4a86fae3c5",
  "10446ed47abc84",
  "19527f38d44a2c",
  "16f0674b23c140",
  "0a27f7b4043e51",
  "008e568c0cf212",
  "105aac161b8fc5",
  "166c92453f25d6",
  "1177d2d385e100",
  "03e7c14825d42d",
  "1c20ab1ab65e41",
  "111e7b6867120e",
  "0b593cc7741131",
  "09a8dc222a9b8a",
  "04a4bd126f7bad",
]
`;
